Fix navbar, icons, buttons and width of login/sign up forms on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,9 +7,10 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato';
 }
 
+/* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -68,8 +69,8 @@ body {
     border: 1px solid black !important;
 }
 
-.bg-black{
-    background-color: #000 !important;
+.bg-black {
+    background: #000 !important;
 }
 
 .overlay {
@@ -284,43 +285,45 @@ input[name='q']::placeholder {
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
-        margin: 5px;
-    }
-
-    .navbar {
-        justify-content: space-around;
-        padding: 0;
     }
 
     body {
         height: calc(100vh - 116px);
     }
 
-    /* Product Form */
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
 
-.btn-file {
-    position: relative;
-    overflow: hidden;
-}
+    .nav-link {
+        padding: 0.15rem;
+    }
 
-.btn-file input[type="file"] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    opacity: 0;
-    cursor: pointer;
-}
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
 
-.custom-checkbox .custom-control-label::before {
-    border-radius: 0;
-    border-color: #dc3545;
-}
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
 
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #dc3545;
-    border-color: #dc3545;
-    border-radius: 0;
-}
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
 }
